[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rds-capacity-heatmap"
version = "0.1.0"
description = "Web tool to visualize RDS MySQL storage capacity across all instances in a Teleport cluster"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "pymysql>=1.1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
